# agni

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.Docker.md  README.md  compose.yaml  pyproject.toml
config/: default.toml
python/: test_requirements.txt
pythons/: test_requirements.txt
pythons/data/: dummy_csv_file.csv
pythons/src/: main.py
pythons/tests/: test_main.py
rust/config/: default.toml
rust/src/: settings.rs
src/: data_frame.rs  lib.rs  main.rs  reader.rs
