[package]
name = "agni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
config = "0.13.4"
env_logger = { version = "0.10.1", features = [] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
